--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>PROJET</groupId>
+    <groupId>DEMARINIS</groupId>
     <artifactId>GEOGEBRA_NEILZ_DEMARINIS</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>GEOGEBRA_NEILZ_DEMARINIS</name>
@@ -61,7 +61,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                PROJET.GEOGEBRA_NEILZ_DEMARINIS.Main
+                                DEMARINIS.GEOGEBRA_NEILZ_DEMARINIS.Main
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
